# Library-Book-Guide

./: .gitignore  .gitmodules  README.md
cartographer_workspace/: carto_slam.sh  log  map_save.sh
cartographer_ws/src/: .rosinstall
cat_ws/build_isolated/: catkin_make_isolated.cache
cat_ws/build_isolated/cartographer_ros/: .ninja_deps  .ninja_log  AllFiles.cmake  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt
cat_ws/build_isolated/cartographer_ros_msgs/: .ninja_log  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt
cat_ws/build_isolated/cartographer_rviz/: .ninja_deps  .ninja_log  AllFiles.cmake  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt
cat_ws/build_isolated/ceres-solver/: CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
cat_ws/build_isolated/rplidar_ros/: CMakeCache.txt  CTestConfiguration.ini  (+4 more)
cat_ws/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
cat_ws/src/: .rosinstall
robot_positions/: .notice  robot_positions.csv  robot_positions_20250120_160201.csv
workspace/: carto_slam.sh
workspace/src/explore/: CMakeLists.txt  package.xml
workspace/src/explore/launch/: explore.launch
workspace/src/explore/src/: explore_control.cpp
workspace/src/laser_to_arduino/: CMakeLists.txt  package.xml
workspace/src/laser_to_arduino/launch/: laser_to_arduino.launch
workspace/src/laser_to_arduino/src/: laser_to_arduino.cpp
(+475 files in other folders)
